--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -39,6 +39,7 @@ jobs:
           fi
   build-and-push:
     runs-on: self-hosted
+    environment: $ENV
     needs: has-credentials
     steps:
       - name: Checkout code
